# convolens

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: pages.toml
app/: Home.py
app/assets/: style.css
app/pages/: 1_Executive_Dashboard.py  2_Conversation_Explorer.py  3_Conversation_Intelligence.py  4_AI_Workspace.py  page_1.py  page_2.py
data/demo/: analytics.parquet  conversations.parquet
scripts/: build_analytics.py  build_demo_data.py  enrich_conversations.py  prepare_data.py  score_risk.py  test_loader.py
src/convolens/: __init__.py
src/convolens/components/: cards.py
src/convolens/data/: __init__.py  cleaner.py  conversations.py  loader.py  validator.py
src/convolens/features/: ai_analysis.py  intent.py
src/convolens/models/: risk_scoring.py
src/convolens/services/: data_loader.py
src/convolens/utils/: paths.py
src/convolens/visualization/: dashboard.py  theme.py
tests/: test_imports.py
